[package]
name = "hooks"
version = "0.1.0"
edition = "2021"

[dependencies.anyhow]
version = "1.0.81"

[dependencies.chrono]
version = "0.4.38"

[dependencies.clap]
features = ["derive"]
version = "4.5.4"

[dependencies.log4rs]
version = "1.3.0"

[dependencies.log]
version = "0.4.21"

[dependencies.reqwest]
version = "0.12.4"

[dependencies.serde]
features = ["derive"]
version = "1.0.199"

[dependencies.tokio]
features = ["rt", "rt-multi-thread", "macros", "fs", "process"]
version = "1.37.0"

[dev-dependencies]
test-case = "=3.3.1"
pretty_assertions = "=1.4.0"
