[package]
name = "hooks"
version = "0.1.0"
edition = "2021"

[dependencies.anyhow]
version = "1.0.81"

[dependencies.chrono]
version = "0.4.38"

[dependencies.log4rs]
default-features = false
features = ["config_parsing", "console_appender"]
version = "1.3.0"

[dependencies.log]
version = "0.4.21"

[profile.dev]
opt-level = 0
debug = true
#split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
#split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
